--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Hexo
         run: |
           ls -al ./
+          git config --global user.email "kaylor.chen@qq.com"
+          git config --global user.name "kaylorchen"
           curl -fsSL https://deb.nodesource.com/setup_12.x | sudo -E bash -
           sudo apt-get install -y nodejs
           npm install hexo
