--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -20,7 +20,7 @@ jobs:
           git branch -v
           git checkout hexo
           curl -fsSL https://deb.nodesource.com/setup_10.x | sudo -E bash -
-          sudo apt-get install -y nodejs
+          sudo apt-get install -y nodejs=12.0.0
           npm install hexo
           npx hexo -v
           npx hexo g
