--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -18,6 +18,7 @@ jobs:
           git config --global user.name "kaylorchen"
           git config --global init.defaultBranch master
           curl -fsSL https://deb.nodesource.com/setup_12.x | sudo -E bash -
+          sudo apt-cache madison nodejs
           sudo apt-get install -y nodejs=12.21.0
           npm install hexo
           npx hexo -v
