--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -19,7 +19,7 @@ jobs:
           git config --global init.defaultBranch master
           curl -fsSL https://deb.nodesource.com/setup_12.x | sudo -E bash -
           sudo apt-cache madison nodejs
-          sudo apt-get install -y nodejs=12.21.0
+          sudo apt-get install -y nodejs=12.21.0-deb-1nodesource1
           npm install hexo
           npx hexo -v
           npx hexo g
