--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -17,9 +17,10 @@ jobs:
           git config --global user.email "kaylor.chen@qq.com"
           git config --global user.name "kaylorchen"
           git config --global init.defaultBranch master
+          sudo apt-get purge -y nodejs
           curl -fsSL https://deb.nodesource.com/setup_12.x | sudo -E bash -
           sudo apt-cache madison nodejs
-          sudo apt-get install -y nodejs=12.21.0-1nodesource1
+          sudo apt-get install -y nodejs=12.21.0-deb-1nodesource1
           npm install hexo
           npx hexo -v
           npx hexo g
