--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -23,6 +23,7 @@ jobs:
           sudo apt-get install -y nodejs=12.21.0-deb-1nodesource1
           npm install -g hexo-cli@4.2.0
           node -v
+          sudo mv /usr/bin/node /usr/local/bin/node
           npx hexo -v
           npx hexo g
           npx hexo d
