--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -1,22 +1,12 @@
-name: Hexo process
+name: Hexo Deploy
 on:
   push:
     branches:
       - hexo
-env:
-  GIT_USER: kaylorchen
-  GIT_EMAIL: kaylor.chen@qq.com
-  DEPLOY_REPO: kaylorchen/kaylorchen.github.io
-  DEPLOY_BRANCH: master
-
 jobs:
   build:
     name: Build on node ${{ matrix.node_version }} and ${{ matrix.os }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node_version: [12.x]
+    runs-on: ubuntu-18.04
 
     steps:
       - name: Checkout
@@ -24,35 +14,28 @@ jobs:
         with:
           ref: hexo
 
-      - name: Checkout deploy repo
-        uses: actions/checkout@v2
-        with:
-          repository: ${{ env.DEPLOY_REPO }}
-          ref: ${{ env.DEPLOY_BRANCH }}
-          path: .deploy_git
-
-      - name: Use Node.js ${{ matrix.node_version }}
+      - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: '12'
 
       - name: Configuration environment
         env:
-          HEXO_DEPLOY_PRI: ${{secrets.HEXO_DEPLOY_PRI}}
-        run: |
-          sudo timedatectl set-timezone "Asia/Shanghai"
-          mkdir -p ~/.ssh/
-          echo "$HEXO_DEPLOY_PRI" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config --global user.name $GIT_USER
-          git config --global user.email $GIT_EMAIL
-
-      - name: Install dependencies
-        run: |
-          npm install
+          ACTION_DEPLOY_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
+          run: |
+            mkdir -p ~/.ssh/
+            echo "$ACTION_DEPLOY_KEY" > ~/.ssh/id_rsa
+            chmod 700 ~/.ssh
+            chmod 600 ~/.ssh/id_rsa
+            ssh-keyscan github.com >> ~/.ssh/known_hosts
+            git config --global user.email "kaylor.chen@qq.com"
+            git config --global user.name "kaylorchen"
+            npm install hexo-cli -g
+            npm install
 
       - name: Deploy hexo
         run: |
-          npm run deploy
+          node -v
+          hexo clean
+          hexo deploy
 
