--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://github.com/kaylorchen/kaylorchen.github.io.git
+  repository: git@github.com:kaylorchen/kaylorchen.github.io.git
   branch: master
 
 
