--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -29,6 +29,7 @@ jobs:
             ssh-keyscan github.com >> ~/.ssh/known_hosts
             git config --global user.email "kaylor.chen@qq.com"
             git config --global user.name "kaylorchen"
+            sudo apt install pandoc
             npm install hexo-cli -g
             npm install
             npm un hexo-renderer-marked
