--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Memories
-subtitle: A hardware engineer who knows a little about software.
+subtitle: 琳儿O(∩_∩)O哈哈~.
 description:
 keywords:
 author: Kaylor
