--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Deploy hexo
         run: |
           node -v
+          cp generator.js node_modules/hexo-generator-index/lib/generator.js
           hexo clean
           hexo deploy
 
