--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -37,7 +37,8 @@ jobs:
       - name: Deploy hexo
         run: |
           node -v
-          cp generator.js node_modules/hexo-generator-index/lib/generator.js
+          ls -lh
+          cp -v generator.js node_modules/hexo-generator-index/lib/generator.js
           hexo clean
           hexo deploy
 
